--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,19 @@ apply plugin: 'java'
 
 // Apply the application plugin to add support for building an application
 apply plugin: 'application'
+// Plugins that send coverage data to coveralls.io
+apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+	
+	maven {
+		url "https://plugins.gradle.org/m2/"
+    }
 }
 
 dependencies {
@@ -20,6 +27,16 @@ dependencies {
 
     // Command line parser
     compile 'com.beust:jcommander:1.72'
+	
+	classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2"
+}
+
+jacocoTestReport {
+    reports {
+		// Coveralls plugin depends on xml format report
+        xml.enabled = true
+        html.enabled = true
+    }
 }
 
 // Define the main class for the application
