--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,23 @@ apply plugin: 'application'
 apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+  
+    dependencies {
+        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2"
+    }
+}
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
-	
-	maven {
-		url "https://plugins.gradle.org/m2/"
-    }
 }
 
 dependencies {
@@ -27,13 +35,11 @@ dependencies {
 
     // Command line parser
     compile 'com.beust:jcommander:1.72'
-	
-	classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2"
 }
 
 jacocoTestReport {
     reports {
-		// Coveralls plugin depends on xml format report
+        // Coveralls plugin depends on xml format report
         xml.enabled = true
         html.enabled = true
     }
