--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,15 @@ apply plugin: 'application'
 apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 
+cobertura.coverageFormats = ['html', 'xml']
+
 buildscript {
     repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+        mavenCentral()
     }
   
     dependencies {
-        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2"
+        compile 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2'
     }
 }
 
@@ -36,14 +36,6 @@ dependencies {
 
     // Command line parser
     compile 'com.beust:jcommander:1.72'
-}
-
-jacocoTestReport {
-    reports {
-        // Coveralls plugin depends on xml format report
-        xml.enabled = true
-        html.enabled = true
-    }
 }
 
 // Define the main class for the application
