--- a/build.gradle
+++ b/build.gradle
@@ -7,19 +7,6 @@ apply plugin: 'java'
 // Apply the application plugin to add support for building an application
 apply plugin: 'application'
 
-buildscript {
-    repositories { jcenter() }
-    dependencies {
-        classpath 'net.saliman:gradle-cobertura-plugin:2.2.2'
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:0.3.1'
-    }
-}
-
-apply plugin: 'cobertura'
-apply plugin: 'coveralls'
-
-cobertura.coverageFormats = ['html', 'xml']
-
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
@@ -43,3 +30,23 @@ sourceCompatibility = 1.8
 
 // Java version to generate classes for
 targetCompatibility = 1.8
+
+apply plugin: 'jacoco'
+apply plugin: 'coveralls'
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:0.3.0'
+    }
+}
